<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>

    <groupId>com.hft</groupId>
    <artifactId>hft-trading-platform</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>HFT Trading Platform</name>

    <modules>
        <module>hft-core</module>
        <module>order-entry-service</module>
        <module>position-service</module>
        <module>risk-dashboard-service</module>
        <module>notification-service</module>
        <module>audit-service</module>
        <module>execution-engine</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <disruptor.version>4.0.0</disruptor.version>
        <chronicle-queue.version>2026.2</chronicle-queue.version>
        <chronicle-map.version>2026.1</chronicle-map.version>
        <aeron.version>1.51.0</aeron.version>
        <guava.version>33.2.1-jre</guava.version>
        <alpaca4j.version>10.0.1</alpaca4j.version>
        <testcontainers.version>1.19.8</testcontainers.version>
        <karate.version>1.4.1</karate.version>
        <sonar.organization>shubham27dec</sonar.organization>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.hft</groupId>
                <artifactId>hft-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Fast path -->
            <dependency>
                <groupId>com.lmax</groupId>
                <artifactId>disruptor</artifactId>
                <version>${disruptor.version}</version>
            </dependency>
            <dependency>
                <groupId>net.openhft</groupId>
                <artifactId>chronicle-queue</artifactId>
                <version>${chronicle-queue.version}</version>
            </dependency>
            <dependency>
                <groupId>net.openhft</groupId>
                <artifactId>chronicle-map</artifactId>
                <version>${chronicle-map.version}</version>
            </dependency>
            <dependency>
                <groupId>io.aeron</groupId>
                <artifactId>aeron-all</artifactId>
                <version>${aeron.version}</version>
            </dependency>

            <!-- Utilities -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>net.jacobpeterson.alpaca</groupId>
                <artifactId>alpaca-java</artifactId>
                <version>${alpaca4j.version}</version>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.intuit.karate</groupId>
                <artifactId>karate-junit5</artifactId>
                <version>${karate.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.13</version>
                <executions>
                    <!-- instruments bytecode before tests run -->
                    <execution>
                        <id>prepare-agent</id>
                        <goals><goal>prepare-agent</goal></goals>
                    </execution>
                    <!-- generates target/site/jacoco/jacoco.xml after tests -->
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals><goal>report</goal></goals>
                    </execution>
                    <!-- fails build if line coverage drops below 85% -->
                    <execution>
                        <id>check</id>
                        <phase>verify</phase>
                        <goals><goal>check</goal></goals>
                        <configuration>
                            <!-- Spring Boot main classes are not unit-testable; exclude them -->
                            <excludes>
                                <exclude>**/*Application.class</exclude>
                            </excludes>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.85</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
